syntax = "proto3";

package orders;

option go_package = "github.com/SEU_USUARIO/my-challenge/internal/service/orderspb";

// Servi√ßo de Orders
service OrderService {
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

// Request e Response para listagem
message ListOrdersRequest {
}

message ListOrdersResponse {
  repeated Order orders = 1;
}

// Estrutura de Order
message Order {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  double total = 5;
}
